fix json fix routes

--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -14,7 +14,7 @@
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
-  
+  "homepage": "https://irenemonlleo.github.io/Portfolio/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
